--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "npm": "^10.8.2"
   },
   "description": ""
 }
